# name: TestCreateAPIKey.test[uvloop-False-False]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-False-False].1
  <class 'dict'> {
    '_id': 'hashed_key',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-False-True]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-False-True].1
  <class 'dict'> {
    '_id': 'hashed_key',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-True-False]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-True-False].1
  <class 'dict'> {
    '_id': 'hashed_key',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-True-True]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestCreateAPIKey.test[uvloop-True-True].1
  <class 'dict'> {
    '_id': 'hashed_key',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestCreateAPIKey.test_naming[uvloop]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_1',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestCreateAPIKey.test_naming[uvloop].1
  <class 'dict'> {
    '_id': 'hashed_key',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_1',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-False-False]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-False-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-False-True]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-False-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-True-False]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-True-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-True-True]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: TestUpdateAPIKey.test[uvloop-True-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
    ],
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: test_edit[uvloop-None]
  <class 'dict'> {
    'administrator': False,
    'email': 'dev@virtool.ca',
    'groups': <class 'list'> [
    ],
    'handle': 'bob',
    'id': 'test',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: test_get[uvloop]
  <class 'dict'> {
    'administrator': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bob',
    'id': 'test',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
